--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@gsap/react": "^2.1.1",
+    "@mui/material": "^5.16.7",
+    "@mui/x-charts": "^7.12.1",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/react-query": "^5.51.23",
+    "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
