--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/_lib/ReactQueryProvider.js"  ],
   "exclude": [
     "node_modules"
   ]
